Workaround for kABI breakage by 4.4.67 iio hid-sensor changes (stable-4.4.67).

--- a/series.conf
+++ b/series.conf
@@ -6154,6 +6154,7 @@
 	patches.drivers/rtc-cmos-Don-t-enable-interrupts-in-the-middle-of-th
 
 	patches.fixes/iio-hid-sensor-Store-restore-poll-and-hysteresis-on
+	patches.kabi/iio-hid-sensor-hub-4.4.67-kabi-fix.patch
 
 	########################################################
 	# Other drivers we have added to the tree
