sched/loadavg: Fix loadavg artifacts on fully idle and on fully loaded systems (bnc#1012985).

--- a/series.conf
+++ b/series.conf
@@ -2363,6 +2363,9 @@
 	patches.suse/thp-reduce-indentation-level-in-change_huge_pmd.patch
 	patches.suse/thp-fix-MADV_DONTNEED-vs.-numa-balancing-race.patch
 
+	# bnc#1012985
+	patches.suse/sched-loadavg-Fix-loadavg-artifacts-on-fully-idle-and-on-fully-loaded-systems.patch
+
 	########################################################
 	# IPC patches
 	########################################################
