--- a/series.conf
+++ b/series.conf
@@ -2365,6 +2365,7 @@
 
 	# bnc#1012985
 	patches.suse/sched-loadavg-Fix-loadavg-artifacts-on-fully-idle-and-on-fully-loaded-systems.patch
+	patches.suse/sched-rt-Fix-PI-handling-vs.-sched_setscheduler.patch
 
 	########################################################
 	# IPC patches
