--- a/series.conf
+++ b/series.conf
@@ -2366,6 +2366,7 @@
 	# bnc#1012985
 	patches.suse/sched-loadavg-Fix-loadavg-artifacts-on-fully-idle-and-on-fully-loaded-systems.patch
 	patches.suse/sched-rt-Fix-PI-handling-vs.-sched_setscheduler.patch
+	patches.suse/sched-fair-Fix-min_vruntime-tracking.patch
 
 	########################################################
 	# IPC patches
