md/raid0: update queue parameter in a safer location (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11282,6 +11282,9 @@
 	patches.suse/0102-block-submit_bio_wait-conversions.patch
 	patches.suse/0103-asm-generic-add-__smp_xxx-wrappers.patch
 	patches.suse/0104-arch-Mass-conversion-of-smp_mb__.patch
+
+	patches.fixes/0001-md-raid0-update-queue-parameter-in-a-safer-location.patch
+
 	##########################################################
 	#
 	# Security stuff
