jhash: Update jhash_[321]words functions to use correct initval (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -2377,6 +2377,7 @@
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
 	patches.fixes/kernel-add-panic_on_warn.patch
+	patches.fixes/0001-jhash-Update-jhash_-321-words-functions-to-use-corre.patch
 
 	########################################################
 	#
