--- a/series.conf
+++ b/series.conf
@@ -3272,6 +3272,7 @@
 	patches.fixes/0001-NFS-don-t-try-to-cross-a-mountpount-when-there-isn-t.patch
 	patches.fixes/nfs-mount-expire.patch
 	patches.fixes/0001-NFS-flush-out-dirty-data-on-file-fput.patch
+	patches.fixes/0001-sunrpc-Update-RPCBIND_MAXNETIDLEN.patch
 
 	########################################################
 	# cifs patches
