--- a/series.conf
+++ b/series.conf
@@ -1792,6 +1792,8 @@
 
 	patches.fixes/proc-revert-proc-pid-maps-stack-TID-annotation.patch
 
+	patches.fixes/0001-fs-fix-data-invalidation-in-the-cleancache-during-di.patch
+
 	########################################################
 	# Scheduler / Core post fate#315482 fixes (post 85b088e934b99)
 	########################################################
