--- a/series.conf
+++ b/series.conf
@@ -1793,6 +1793,7 @@
 	patches.fixes/proc-revert-proc-pid-maps-stack-TID-annotation.patch
 
 	patches.fixes/0001-fs-fix-data-invalidation-in-the-cleancache-during-di.patch
+	patches.fixes/0002-fs-block_dev-always-invalidate-cleancache-in-invalid.patch
 
 	########################################################
 	# Scheduler / Core post fate#315482 fixes (post 85b088e934b99)
