--- a/series.conf
+++ b/series.conf
@@ -11290,6 +11290,7 @@
 	patches.suse/0104-arch-Mass-conversion-of-smp_mb__.patch
 
 	patches.fixes/0001-md-raid0-update-queue-parameter-in-a-safer-location.patch
+	patches.fixes/0001-md-ensure-md-devices-are-freed-before-module-is-unlo.patch
 
 	##########################################################
 	#
