--- a/series.conf
+++ b/series.conf
@@ -10271,6 +10271,7 @@
 	patches.suse/0001-ceph-tolerate-bad-i_size-for-symlink-inode.patch
 	patches.fixes/0001-cephfs-ignore-error-from-invalidate_inode_pages2_ran.patch
 	patches.fixes/0002-cephfs-remove-warning-when-ceph_releasepage-is-calle.patch
+	patches.fixes/0001-ceph-Correctly-return-NXIO-errors-from-ceph_llseek.patch
 
 	########################################################
 	# PCI and PCI hotplug
