--- a/series.conf
+++ b/series.conf
@@ -11292,6 +11292,7 @@
 
 	patches.fixes/0001-md-raid0-update-queue-parameter-in-a-safer-location.patch
 	patches.fixes/0001-md-ensure-md-devices-are-freed-before-module-is-unlo.patch
+	patches.fixes/0001-md-raid1-don-t-clear-bitmap-bit-when-bad-block-list-.patch
 
 	##########################################################
 	#
