md/raid10: don't clear bitmap bit when bad-block-list write fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11294,6 +11294,7 @@
 	patches.fixes/0001-md-ensure-md-devices-are-freed-before-module-is-unlo.patch
 	patches.fixes/0001-md-raid1-don-t-clear-bitmap-bit-when-bad-block-list-.patch
 	patches.fixes/0003-md-raid10-ensure-device-failure-recorded-before-writ.patch
+	patches.fixes/0002-md-raid10-don-t-clear-bitmap-bit-when-bad-block-list.patch
 
 	##########################################################
 	#
