--- a/series.conf
+++ b/series.conf
@@ -3277,6 +3277,7 @@
 	patches.fixes/nfs-mount-expire.patch
 	patches.fixes/0001-NFS-flush-out-dirty-data-on-file-fput.patch
 	patches.fixes/0001-sunrpc-Update-RPCBIND_MAXNETIDLEN.patch
+	patches.fixes/0001-NFSv4.1-Fix-Oopsable-condition-in-server-callback-ra.patch
 
 	########################################################
 	# cifs patches
