ceph: fix file open flags on ppc64 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10273,6 +10273,7 @@
 	patches.fixes/0001-cephfs-ignore-error-from-invalidate_inode_pages2_ran.patch
 	patches.fixes/0002-cephfs-remove-warning-when-ceph_releasepage-is-calle.patch
 	patches.fixes/0001-ceph-Correctly-return-NXIO-errors-from-ceph_llseek.patch
+	patches.fixes/0001-ceph-fix-file-open-flags-on-ppc64.patch
 
 	########################################################
 	# PCI and PCI hotplug
