blacklist.conf:  assorted unneeded "fixes" patches

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -133,3 +133,11 @@ d0fe85e95f56a01a49e4893aa26263e8aee67eef # config fix only, not needed
 0d808df06a44200f52262b6eb72bcb6042f5a7c5 # KVM ppc fix - tech preview
 44d5f6f5901e996744858c175baee320ccf1eda3 # Kconfig only fix
 88b1bf7268f56887ca88eb09c6fb0f4fc970121a # CAPI is unsupported on SP1 (bsc#1016725)
+1d5cda4076d930d6d52088ed2c7753f7c564cbd7 # build-bug.  If we don't notice, it doesn't matter
+55679c8d23d191c24ad133abc5647e3054ca8de1 # fix sparse complaint
+834392a7d92677ff2bdc1c709b1171ee585b55c9 # doco only
+9b174527e7b756cda9f5d9e541f87b7fec9cfdf0 # not relevant as V4L is built as module.
+af2e859edd477fa1ea3d1d106f41a595cff3d162 # build bug in unused code
+b977b644ccf821ab1269582f7efe1d0d85faa1f6 # clean-up, not bug fix
+bdbe81445407644492b9ac69a24d35e3202d773b # driver not included
+cdaf3e15385d3232b52287e50692506f8fd01a09 # driver not included
