--- a/series.conf
+++ b/series.conf
@@ -11293,6 +11293,7 @@
 	patches.suse/0104-arch-Mass-conversion-of-smp_mb__.patch
 
 	patches.fixes/0001-md-raid0-update-queue-parameter-in-a-safer-location.patch
+	patches.fixes/0001-md-raid0-apply-base-queue-limits-before-disk_stack_l.patch
 	patches.fixes/0001-md-ensure-md-devices-are-freed-before-module-is-unlo.patch
 	patches.fixes/0001-md-raid1-don-t-clear-bitmap-bit-when-bad-block-list-.patch
 	patches.fixes/0003-md-raid10-ensure-device-failure-recorded-before-writ.patch
