enic: set skb->hash type properly (bsc#922871 fate#318754).

--- a/series.conf
+++ b/series.conf
@@ -9639,6 +9639,8 @@
 	patches.fixes/i40e-Impose-a-lower-limit-on-gso-size.patch
 	patches.fixes/sfc-reduce-severity-of-PIO-buffer-alloc-failures.patch
 
+	patches.fixes/enic-set-skb-hash-type-properly.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
