blacklist.conf: add a5af83925363
a5af83925363eb85d467933e3d6ec5a87001eb7c only fixes the gcc7 warning.
Besides, it depends on the new API, ktime_get_real_seconds().

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -133,3 +133,4 @@ d0fe85e95f56a01a49e4893aa26263e8aee67eef # config fix only, not needed
 0d808df06a44200f52262b6eb72bcb6042f5a7c5 # KVM ppc fix - tech preview
 44d5f6f5901e996744858c175baee320ccf1eda3 # Kconfig only fix
 88b1bf7268f56887ca88eb09c6fb0f4fc970121a # CAPI is unsupported on SP1 (bsc#1016725)
+a5af83925363eb85d467933e3d6ec5a87001eb7c # gcc7 warning fix only, also depends on ktime_get_real_seconds()
