- printk: prevent userland from spoofing kernel messages   (bsc#1039721). - Refresh   patches.fixes/printk-nmi-correct-detection-of-the-continuous-buffer-si.patch.

--- a/series.conf
+++ b/series.conf
@@ -10746,6 +10746,8 @@
 
 	patches.fixes/ipmi-Turn-off-all-activity-on-an-idle-ipmi-interface
 
+	patches.fixes/printk-prevent-userland-from-spoofing-kernel-message.patch
+
 	patches.drivers/8250_pci-Fix-potential-use-after-free-in-error-path.patch
 
 	########################################################
