ceph: check i_nlink while converting a file handle to dentry (bsc#1039864).

--- a/series.conf
+++ b/series.conf
@@ -10281,6 +10281,7 @@
 	patches.fixes/0002-cephfs-remove-warning-when-ceph_releasepage-is-calle.patch
 	patches.fixes/0001-ceph-Correctly-return-NXIO-errors-from-ceph_llseek.patch
 	patches.fixes/0001-ceph-fix-file-open-flags-on-ppc64.patch
+	patches.fixes/ceph-check-i_nlink-while-converting-a-file-handle-to-dentry.patch
 
 	########################################################
 	# PCI and PCI hotplug
