tracing/kprobes: Enforce kprobes teardown after testing (bnc#1012985).

--- a/series.conf
+++ b/series.conf
@@ -11608,6 +11608,8 @@
 	patches.fixes/01-perf-x86-intel-add-intel-rapl-pp1-energy-counter-support.patch
 	patches.fixes/02-perf-rapl-fix-sysfs_show-initialization-for-rapl-pmu.patch
 
+	patches.fixes/tracing-kprobes-Enforce-kprobes-teardown-after-testing.patch
+
 	########################################################
 	# KVM patches
 	########################################################
