pid_ns: Sleep in TASK_INTERRUPTIBLE in zap_pid_ns_processes (bnc#1012985).

--- a/series.conf
+++ b/series.conf
@@ -2373,6 +2373,7 @@
 	patches.suse/sched-loadavg-Fix-loadavg-artifacts-on-fully-idle-and-on-fully-loaded-systems.patch
 	patches.suse/sched-rt-Fix-PI-handling-vs.-sched_setscheduler.patch
 	patches.suse/sched-fair-Fix-min_vruntime-tracking.patch
+	patches.suse/pid_ns-Sleep-in-TASK_INTERRUPTIBLE-in-zap_pid_ns_processes.patch
 
 	########################################################
 	# IPC patches
