--- a/series.conf
+++ b/series.conf
@@ -8586,6 +8586,7 @@
 	patches.drivers/fm10k-0095-fm10k-remove-err_no-reference-in-fm10k_mbx.c.patch
 	patches.drivers/fm10k-0096-fm10k-fix-iov_msg_lport_state_pf-issue.patch
 	patches.drivers/fm10k-0097-fm10k-Fix-missing-braces-after-if-statement.patch
+	patches.drivers/fm10k-correctly-check-if-interface-is-removed.patch
 
 	patches.drivers/0001-IB-qib-Use-pci_is_root_bus-to-check-whether-it-is-a-.patch
 	patches.drivers/0002-PCI-Export-pcie_set_mps-and-pcie_get_mps.patch
