blacklist powerpc/cell - we do not support that blacklist 872aa779bcdd powerpc/module: Fix stubs for BE

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -60,6 +60,8 @@ drivers/net/ethernet/ibm/ibmvnic.c
 drivers/net/ethernet/ibm/ibmvnic.h
 # technology preview only (FATE#317763)
 arch/powerpc/kvm
+# we do not support Cell
+arch/powerpc/platforms/cell
 
 # Blacklisted Commits
 # -------------------
@@ -143,3 +145,4 @@ bdbe81445407644492b9ac69a24d35e3202d773b # driver not included
 cdaf3e15385d3232b52287e50692506f8fd01a09 # driver not included
 a5af83925363eb85d467933e3d6ec5a87001eb7c # gcc7 warning fix only, also depends on ktime_get_real_seconds()
 1fe89e1b6d270aa0d3452c60d38461ea589594e3 # autogroup is irrelevant to SLE kernels
+872aa779bcdd26bbe2d538c36e2c2072b3f03c8c # ppc BE only
