blacklist fe06fe860250 selftests/powerpc: Fix TM resched DSCR test with some compilers blacklist bc14c49195e4 powerpc/powernv: Fix MCE handler to avoid trashing CR0/CR1 registers.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -146,3 +146,5 @@ cdaf3e15385d3232b52287e50692506f8fd01a09 # driver not included
 a5af83925363eb85d467933e3d6ec5a87001eb7c # gcc7 warning fix only, also depends on ktime_get_real_seconds()
 1fe89e1b6d270aa0d3452c60d38461ea589594e3 # autogroup is irrelevant to SLE kernels
 872aa779bcdd26bbe2d538c36e2c2072b3f03c8c # ppc BE only
+fe06fe860250a4f01d0eaf70a2563b1997174a74 # selftest only
+bc14c49195e49b3231c01e4c44e3e5456c940b94 # we do not winkle
