powerpc/bpf/jit: Disable classic BPF JIT on ppc64le (bsc#1041429, [2017-05-29] Pending SUSE Kernel Fixes).

--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
 	patches.arch/ppc-prom-nodisplay.patch
 	patches.arch/rapidio-modular-core-build-on-powerpc-and-mips.patch
 	patches.suse/powerpc-increase-RMA-size
+	patches.arch/powerpc-bpf-jit-Disable-classic-BPF-JIT-on-ppc64le.patch
 
 	########################################################
 	# PPC64 in little endian mode
