powerpc/book3s: Fix MCE console messages for unrecoverable MCE (bnc#878240, FATE#315784, [2017-05-29] Pending SUSE Kernel Fixes).

--- a/series.conf
+++ b/series.conf
@@ -602,6 +602,8 @@
 	patches.arch/powernv-210-Remove-PNV_EEH_STATE_REMOVED
 	patches.arch/powernv-211-Move-PNV_EEH_STATE_ENABLED-around
 	patches.arch/powernv-214-Use-EEH-PCI-config-accessors
+	# [2017-05-29] Pending SUSE Kernel Fixes
+	patches.arch/powernv-215-book3s-Fix-MCE-console-messages-for-unrecoverable-MCE.patch
 
 	patches.arch/ppc64le-0025-powernv-Fix-endian-issues-in-OPAL-ICS-backen
 	patches.arch/ppc64le-0033-hvsi-Fix-endian-issues-in-HVSI-driver
