powerpc: Fix bad inline asm constraint in create_zero_mask() (bnc#856774, fate#315275, LTC#92305, [2017-05-29] Pending SUSE Kernel Fixes).

--- a/series.conf
+++ b/series.conf
@@ -647,6 +647,9 @@
 	patches.arch/ppc64le-0071-pseries-Fix-endian-issues-in-MSI-code
 	patches.arch/ppc64le-0072-Fix-endian-issues-in-crash-dump-code
 	patches.arch/ppc64le-build-vmlinux.patch
+	# [2017-05-29] Pending SUSE Kernel Fixes
+	patches.arch/ppc64le-0073-Fix-bad-inline-asm-constraint-in-create_zero.patch
+
 	patches.arch/ppc-Check-return-value-of-instance-to-package-OF
 	patches.arch/ppc-Fix-alignment-of-secondary-cpu-spin-vars
 	patches.arch/ppc-Fix-endian-issues-in-kexec-and-crash-dump
@@ -12564,4 +12567,3 @@
 	patches.xen/xen-x86_64-unmapped-initrd
 	patches.xen/xen-x86_64-vread-pvclock
 	patches.xen/xen-x86_64-m2p-strict
-
