blacklist.conf: add the unsupported freescale ethernet card

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -62,6 +62,8 @@ drivers/net/ethernet/ibm/ibmvnic.h
 arch/powerpc/kvm
 # we do not support Cell
 arch/powerpc/platforms/cell
+# freescale ethernet cards are not supported
+drivers/net/ethernet/freescale
 
 # Blacklisted Commits
 # -------------------
