--- a/series.conf
+++ b/series.conf
@@ -10956,6 +10956,7 @@
 	########################################################
 
 	patches.fixes/0001-timekeeping-Ignore-the-bogus-sleep-time-if-pm_trace-.patch
+	patches.kabi/0002-kABI-mask-an-include.patch
 
 	########################################################
 	# device-mapper
