--- a/series.conf
+++ b/series.conf
@@ -10955,6 +10955,8 @@
 	# Suspend/Resume stuff
 	########################################################
 
+	patches.fixes/0001-timekeeping-Ignore-the-bogus-sleep-time-if-pm_trace-.patch
+
 	########################################################
 	# device-mapper
 	########################################################
