xfs: use ->b_state to fix buffer I/O accounting release race (bsc#1041160) (bsc#1041160).

--- a/series.conf
+++ b/series.conf
@@ -4172,6 +4172,7 @@
 	patches.fixes/xfs-track-and-serialize-in-flight-async-buffers-against-unmount.patch
 	patches.fixes/xfs-don-t-assert-fail-on-non-async-buffers-on-ioacct-decrement.patch
 	patches.kabi/kabi-protect-struct-xfs_buftarg-and-struct-xfs_mount.patch
+	patches.fixes/xfs-use-b_state-to-fix-buffer-I-O-accounting-release.patch
 
 	patches.fixes/0001-xfs-fix-a-couple-error-sequence-jumps-in-xfs_mountfs.patch
 	patches.fixes/0002-xfs-fix-coccinelle-warnings.patch
