powerpc: Add missing error check to prom_find_boot_cpu() (bnc#856774 fate#315275, LTC#92305).

--- a/series.conf
+++ b/series.conf
@@ -1203,6 +1203,8 @@
 	patches.arch/powerpc-pseries-cpuidle-Remove-MAX_IDLE_STATE-macro.patch
 	patches.arch/cpuidle-powernv-pseries-Auto-promotion-of-snooze-to-deeper-idle-state.patch
 
+	patches.fixes/powerpc-Add-missing-error-check-to-prom_find_boot_cpu
+
 	########################################################
 	# ARM
 	########################################################
