powerpc/64: Fix flush_(d|i)cache_range() called from modules (bnc#863764 fate#315275, LTC#103998).

--- a/series.conf
+++ b/series.conf
@@ -1204,6 +1204,7 @@
 	patches.arch/cpuidle-powernv-pseries-Auto-promotion-of-snooze-to-deeper-idle-state.patch
 
 	patches.fixes/powerpc-Add-missing-error-check-to-prom_find_boot_cpu
+	patches.fixes/powerpc-64-Fix-flush_-di-cache_range-called-from-modules
 
 	########################################################
 	# ARM
