--- a/series.conf
+++ b/series.conf
@@ -487,6 +487,7 @@
 	patches.arch/0014-KVM-arm64-vgic-v3-Add-ICV_IGNREN0_EL1-handler.patch
 	patches.arch/0015-KVM-arm64-vgic-v3-Add-misc-Group-0-handlers.patch
 	patches.arch/0016-KVM-arm64-vgic-v3-Enable-trapping-of-Group-0-system-.patch
+	patches.arch/0017-KVM-arm64-Enable-GICv3-Group-0-sysreg-trapping-via-c.patch
 
 	########################################################
 	# Staging tree patches
