- KVM: arm64: vgic-v3: Log which GICv3 system registers are   trapped (bsc#1031492). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -495,6 +495,7 @@
 	patches.arch/0022-KVM-arm64-vgic-v3-Add-ICV_CTLR_EL1-handler.patch
 	patches.arch/0023-KVM-arm64-vgic-v3-Add-ICV_PMR_EL1-handler.patch
 	patches.arch/0024-KVM-arm64-Enable-GICv3-common-sysreg-trapping-via-co.patch
+	patches.arch/0025-KVM-arm64-vgic-v3-Log-which-GICv3-system-registers-a.patch
 
 	########################################################
 	# Staging tree patches
