KVM: arm64: Enable GICv3 common sysreg trapping via command-line (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -494,6 +494,7 @@
 	patches.arch/0021-KVM-arm64-vgic-v3-Add-ICV_RPR_EL1-handler.patch
 	patches.arch/0022-KVM-arm64-vgic-v3-Add-ICV_CTLR_EL1-handler.patch
 	patches.arch/0023-KVM-arm64-vgic-v3-Add-ICV_PMR_EL1-handler.patch
+	patches.arch/0024-KVM-arm64-Enable-GICv3-common-sysreg-trapping-via-co.patch
 
 	########################################################
 	# Staging tree patches
