KVM: arm64: Make kvm_condition_valid32() accessible from EL2 (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -473,6 +473,7 @@
 
 	patches.arch/0001-arm64-Add-a-facility-to-turn-an-ESR-syndrome-into-a-.patch
 	patches.arch/0002-KVM-arm-arm64-vgic-v3-Add-accessors-for-the-ICH_APxR.patch
+	patches.arch/0003-KVM-arm64-Make-kvm_condition_valid32-accessible-from.patch
 
 	########################################################
 	# Staging tree patches
