--- a/series.conf
+++ b/series.conf
@@ -477,6 +477,7 @@
 	patches.arch/0004-KVM-arm64-vgic-v3-Add-hook-to-handle-guest-GICv3-sys.patch
 	patches.arch/0005-KVM-arm64-vgic-v3-Add-ICV_BPR1_EL1-handler.patch
 	patches.arch/0006-KVM-arm64-vgic-v3-Add-ICV_IGRPEN1_EL1-handler.patch
+	patches.arch/0007-KVM-arm64-vgic-v3-Add-ICV_IAR1_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
