KVM: arm64: vgic-v3: Add ICV_CTLR_EL1 handler (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -492,6 +492,7 @@
 	patches.arch/0019-arm64-Add-workaround-for-Cavium-Thunder-erratum-3011.patch
 	patches.arch/0020-KVM-arm64-vgic-v3-Add-ICV_DIR_EL1-handler.patch
 	patches.arch/0021-KVM-arm64-vgic-v3-Add-ICV_RPR_EL1-handler.patch
+	patches.arch/0022-KVM-arm64-vgic-v3-Add-ICV_CTLR_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
