KVM: arm64: vgic-v3: Enable trapping of Group-0 system registers (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -486,6 +486,7 @@
 	patches.arch/0013-KVM-arm64-vgic-v3-Add-ICV_BPR0_EL1-handler.patch
 	patches.arch/0014-KVM-arm64-vgic-v3-Add-ICV_IGNREN0_EL1-handler.patch
 	patches.arch/0015-KVM-arm64-vgic-v3-Add-misc-Group-0-handlers.patch
+	patches.arch/0016-KVM-arm64-vgic-v3-Enable-trapping-of-Group-0-system-.patch
 
 	########################################################
 	# Staging tree patches
