arm64: Add a facility to turn an ESR syndrome into a sysreg encoding (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -471,6 +471,8 @@
 	# KVM patches
 	########################################################
 
+	patches.arch/0001-arm64-Add-a-facility-to-turn-an-ESR-syndrome-into-a-.patch
+
 	########################################################
 	# Staging tree patches
 	# new drivers that are going upstream
