--- a/series.conf
+++ b/series.conf
@@ -489,6 +489,7 @@
 	patches.arch/0016-KVM-arm64-vgic-v3-Enable-trapping-of-Group-0-system-.patch
 	patches.arch/0017-KVM-arm64-Enable-GICv3-Group-0-sysreg-trapping-via-c.patch
 	patches.arch/0018-arm64-Add-MIDR-values-for-Cavium-cn83XX-SoCs.patch
+	patches.arch/0019-arm64-Add-workaround-for-Cavium-Thunder-erratum-3011.patch
 
 	########################################################
 	# Staging tree patches
