--- a/series.conf
+++ b/series.conf
@@ -485,6 +485,7 @@
 	patches.arch/0012-KVM-arm64-Enable-GICv3-Group-1-sysreg-trapping-via-c.patch
 	patches.arch/0013-KVM-arm64-vgic-v3-Add-ICV_BPR0_EL1-handler.patch
 	patches.arch/0014-KVM-arm64-vgic-v3-Add-ICV_IGNREN0_EL1-handler.patch
+	patches.arch/0015-KVM-arm64-vgic-v3-Add-misc-Group-0-handlers.patch
 
 	########################################################
 	# Staging tree patches
