KVM: arm64: vgic-v3: Enable trapping of Group-1 system registers (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -481,6 +481,7 @@
 	patches.arch/0008-KVM-arm64-vgic-v3-Add-ICV_EOIR1_EL1-handler.patch
 	patches.arch/0009-KVM-arm64-vgic-v3-Add-ICV_AP1Rn_EL1-handler.patch
 	patches.arch/0010-KVM-arm64-vgic-v3-Add-ICV_HPPIR1_EL1-handler.patch
+	patches.arch/0011-KVM-arm64-vgic-v3-Enable-trapping-of-Group-1-system-.patch
 
 	########################################################
 	# Staging tree patches
