KVM: arm64: vgic-v3: Add ICV_AP1Rn_EL1 handler (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -479,6 +479,7 @@
 	patches.arch/0006-KVM-arm64-vgic-v3-Add-ICV_IGRPEN1_EL1-handler.patch
 	patches.arch/0007-KVM-arm64-vgic-v3-Add-ICV_IAR1_EL1-handler.patch
 	patches.arch/0008-KVM-arm64-vgic-v3-Add-ICV_EOIR1_EL1-handler.patch
+	patches.arch/0009-KVM-arm64-vgic-v3-Add-ICV_AP1Rn_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
