KVM: arm64: vgic-v3: Add ICV_DIR_EL1 handler (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -490,6 +490,7 @@
 	patches.arch/0017-KVM-arm64-Enable-GICv3-Group-0-sysreg-trapping-via-c.patch
 	patches.arch/0018-arm64-Add-MIDR-values-for-Cavium-cn83XX-SoCs.patch
 	patches.arch/0019-arm64-Add-workaround-for-Cavium-Thunder-erratum-3011.patch
+	patches.arch/0020-KVM-arm64-vgic-v3-Add-ICV_DIR_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
