--- a/series.conf
+++ b/series.conf
@@ -472,6 +472,7 @@
 	########################################################
 
 	patches.arch/0001-arm64-Add-a-facility-to-turn-an-ESR-syndrome-into-a-.patch
+	patches.arch/0002-KVM-arm-arm64-vgic-v3-Add-accessors-for-the-ICH_APxR.patch
 
 	########################################################
 	# Staging tree patches
