KVM: arm64: Enable GICv3 Group-1 sysreg trapping via command-line (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -482,6 +482,7 @@
 	patches.arch/0009-KVM-arm64-vgic-v3-Add-ICV_AP1Rn_EL1-handler.patch
 	patches.arch/0010-KVM-arm64-vgic-v3-Add-ICV_HPPIR1_EL1-handler.patch
 	patches.arch/0011-KVM-arm64-vgic-v3-Enable-trapping-of-Group-1-system-.patch
+	patches.arch/0012-KVM-arm64-Enable-GICv3-Group-1-sysreg-trapping-via-c.patch
 
 	########################################################
 	# Staging tree patches
