KVM: arm64: vgic-v3: Add ICV_BPR1_EL1 handler (bsc#1031492).

--- a/series.conf
+++ b/series.conf
@@ -475,6 +475,7 @@
 	patches.arch/0002-KVM-arm-arm64-vgic-v3-Add-accessors-for-the-ICH_APxR.patch
 	patches.arch/0003-KVM-arm64-Make-kvm_condition_valid32-accessible-from.patch
 	patches.arch/0004-KVM-arm64-vgic-v3-Add-hook-to-handle-guest-GICv3-sys.patch
+	patches.arch/0005-KVM-arm64-vgic-v3-Add-ICV_BPR1_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
