--- a/series.conf
+++ b/series.conf
@@ -488,6 +488,7 @@
 	patches.arch/0015-KVM-arm64-vgic-v3-Add-misc-Group-0-handlers.patch
 	patches.arch/0016-KVM-arm64-vgic-v3-Enable-trapping-of-Group-0-system-.patch
 	patches.arch/0017-KVM-arm64-Enable-GICv3-Group-0-sysreg-trapping-via-c.patch
+	patches.arch/0018-arm64-Add-MIDR-values-for-Cavium-cn83XX-SoCs.patch
 
 	########################################################
 	# Staging tree patches
