--- a/series.conf
+++ b/series.conf
@@ -483,6 +483,7 @@
 	patches.arch/0010-KVM-arm64-vgic-v3-Add-ICV_HPPIR1_EL1-handler.patch
 	patches.arch/0011-KVM-arm64-vgic-v3-Enable-trapping-of-Group-1-system-.patch
 	patches.arch/0012-KVM-arm64-Enable-GICv3-Group-1-sysreg-trapping-via-c.patch
+	patches.arch/0013-KVM-arm64-vgic-v3-Add-ICV_BPR0_EL1-handler.patch
 
 	########################################################
 	# Staging tree patches
