--- a/blacklist.conf
+++ b/blacklist.conf
@@ -150,3 +150,4 @@ a5af83925363eb85d467933e3d6ec5a87001eb7c # gcc7 warning fix only, also depends o
 872aa779bcdd26bbe2d538c36e2c2072b3f03c8c # ppc BE only
 fe06fe860250a4f01d0eaf70a2563b1997174a74 # selftest only
 bc14c49195e49b3231c01e4c44e3e5456c940b94 # we do not winkle
+43e24e82f35291d4c1ca78877ce1b20d3aeb78f1 # API change
