--- a/series.conf
+++ b/series.conf
@@ -3094,6 +3094,7 @@
 	patches.fixes/netfilter-bridge-Use-__in6_dev_get-rather-than-in6_d.patch
 
 	patches.fixes/netfilter-allow-logging-fron-non-init-netns.patch
+	patches.fixes/netfilter-prevent-unregistering-nf_log_all_netns-in-.patch
 
 	########################################################
 	# NFS
