mlock: fix mlock count can not decrease in race condition (VM Functionality, bsc#1042696).

--- a/series.conf
+++ b/series.conf
@@ -1807,6 +1807,8 @@
 	patches.fixes/0002-fs-block_dev-always-invalidate-cleancache-in-invalid.patch
 	patches.fixes/0001-fs-xattr.c-zero-out-memory-copied-to-userspace-in-ge.patch
 
+	patches.fixes/mlock-fix-mlock-count-can-not-decrease-in-race-condition.patch
+
 	########################################################
 	# Scheduler / Core post fate#315482 fixes (post 85b088e934b99)
 	########################################################
