--- a/blacklist.conf
+++ b/blacklist.conf
@@ -150,3 +150,4 @@ a5af83925363eb85d467933e3d6ec5a87001eb7c # gcc7 warning fix only, also depends o
 872aa779bcdd26bbe2d538c36e2c2072b3f03c8c # ppc BE only
 fe06fe860250a4f01d0eaf70a2563b1997174a74 # selftest only
 bc14c49195e49b3231c01e4c44e3e5456c940b94 # we do not winkle
+7162a1e87b3e380133dadc7909081bb70d0a7041 # Bug also needs 6cdb18ad98a49f7e9b95d538a0614cde827404b8 which we won't have in SLE12-SP1 due to KABI
